Fix scrollbar-width property in style.css

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
-  scrollbar-width: none
+  scrollbar-width: none;
 }
 
 body {
